--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -83,4 +83,8 @@
     .backdrop-filter-blur {
         backdrop-filter: blur(5px);
     }
+
+    .filter-grayscale {
+        filter: grayscale(1);
+    }
 }
