--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -86,6 +86,10 @@
     h6 .py-heading-permalink {
         @apply absolute right-0 md:-left-6 text-gray-200 dark:text-gray-700 hover:no-underline hover:text-gray-300 dark:hover:text-gray-600;
     }
+
+    .search__results em {
+        @apply bg-primary-500 not-italic text-primary-900;
+    }
 }
 
 @layer utilities {
